--- a/website/search.html
+++ b/website/search.html
@@ -53,8 +53,11 @@
 		<div id="content-view" class="container" style="padding-top: 30px; height: 100%;">
 			<!-- real url: https://hoos-disaster-relief.herokuapp.com/ -->
 			
+			<h2 class="float-left"> API Documentation </h2>
+			<h3 class="float-left"> Schema </h2>
+			API requests are all consist of <code>POST</code> requests that send a JSON object to the <code>api/search</code> endpoint. The JSON objects enable the expression of complicaed logical 
 			<div class="form-group">
-				<label for="exampleFormControlTextarea1">API Query Example</label>
+				<h2> Query the API </h2>
 				<textarea class="form-control" id="searchRequestBox" rows="3"></textarea>
 				<button class="btn btn-lg btn-primary btn-block" onclick="updateSearchPage();">Search</button>
 			</div>
