--- a/website/search.html
+++ b/website/search.html
@@ -54,8 +54,22 @@
 			<!-- real url: https://hoos-disaster-relief.herokuapp.com/ -->
 			
 			<h2 class="float-left"> API Documentation </h2>
+			</br></br>
 			<h3 class="float-left"> Schema </h2>
-			API requests are all consist of <code>POST</code> requests that send a JSON object to the <code>api/search</code> endpoint. The JSON objects enable the expression of complicaed logical 
+			</br></br>
+			
+			API requests are all consist of <code>POST</code> requests that send a JSON object to the <code>api/search</code> endpoint. The JSON objects enable the expression of complicated logical operations so that they can query for exactly the data they need.
+			
+			The basic format of a request is a parameter followed by one or more arguments. 
+			<code>
+			<p>
+			{
+				"parameter" : {
+					"argument" : "value"
+				}
+			}
+			</p>
+			</code>
 			<div class="form-group">
 				<h2> Query the API </h2>
 				<textarea class="form-control" id="searchRequestBox" rows="3"></textarea>
