--- a/website/index.html
+++ b/website/index.html
@@ -44,10 +44,10 @@
 					<div class="collapse navbar-collapse" id="navbarColor01">
 						<ul class="navbar-nav mr-auto">
 							<li class="nav-item active">
-								<a class="nav-link" href="home" id="home-page-link">Home<span class="sr-only" id="selected-nav-page">(current)</span></a>
+								<a class="nav-link" href="/home" id="home-page-link">Home<span class="sr-only" id="selected-nav-page">(current)</span></a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href='search'; id="config-page-link">Search</a>
+								<a class="nav-link" href='/documentation'; id="config-page-link">Documentation</a>
 							</li>
 						</ul>
 					</div>
@@ -56,6 +56,22 @@
 		</header>
 		
 		<div id="content-view" class="container" style="padding-top: 30px; height: 100%;">
+		
+		<a class="navbar-brand" href="home">
+		    <img src="images/logo.png" width="200" height="200" class="d-inline-block align-middle" alt=""><br>
+	    </a>
+		<h1 class="display-1">Clear Skies</h1>
+		<br>
+		<h1 class="display-">Mission Statement</h1>
+		<p class="text-justify display-4">
+		Natural disasters can be devastating for a community, and it in poorer regions it is difficult for humanitarian organizations to realize that a crisis needs their attention. Poor Internet connectivity, reporting, and a government infrastructure infrastructure all mean that developing countries experience much more lethal and damaging natural disasters. 
+		</p>
+		<p class="text-justify display-4">
+		We aim we provide another source of data that can indicate that natural disasters such as floods, landslides, and earthquakes are occurring by analyzing live special media posts for images and texts that indicate a disaster occurred. We then store the information from that post in our database and make it so developers around the world can access it and search it through our API. 
+		</p>
+		<p class="text-justify display-4">
+		The end result is that we can learn about natural disasters sooner than ever before, and use this earlier warning to mitigate the devastating effects they can have.	
+		</p>
 		</div>
 		
 		<footer class="mastfoot mt-auto navbar-fixed-bottom" id="document-footer">
