--- a/website/search.html
+++ b/website/search.html
@@ -31,7 +31,7 @@
 			<nav id="main-nav-bar" class="nav navbar sticky-top navbar-expand-lg navbar-dark bg-success" style="background-color: #e3f2fd;">
 				<!-- Sub container class with Clear Skies logo-->
 				<div class="container">
-					<a class="navbar-brand" href="home">
+					<a class="navbar-brand" href="/home">
 						<img src="images/logo.png" width="50" height="50" class="d-inline-block align-middle" alt="">
 						Clear Skies
 					</a>
@@ -44,10 +44,10 @@
 						<ul class="navbar-nav mr-auto">
 							<li class="nav-item">
 								<!--Navigation bar 'home' and 'search' fields-->
-								<a class="nav-link" href='home'); id="home-page-link">Home</a>
+								<a class="nav-link" href='home'; id="home-page-link">Home</a>
 							</li>
 							<li class="nav-item active">
-								<a class="nav-link" href='search'; id="config-page-link">Search<span class="sr-only" id="selected-nav-page">(current)</span></a>
+								<a class="nav-link" href='documentation'; id="config-page-link">Documentation<span class="sr-only" id="selected-nav-page">(current)</span></a>
 							</li>
 						</ul>
 					</div>
